fixed stretching of pic

--- a/frontend/src/components/getSpotById/getSpotById.css
+++ b/frontend/src/components/getSpotById/getSpotById.css
@@ -23,13 +23,14 @@
     text-align: start;
 }
 
-.getOnePreviewImage {
+.previewImage > img {
     width: 100%;
     height: 334.33px;
     object-fit: cover;
 }
 #previewImage {
     width: 50%;
+    height: 100%
 }
 
 .nonPreviewPics {
@@ -41,7 +42,7 @@
     gap: 5px;
 }
 
-.otherImages {
+.nonPreviewPics > img {
     width: 49%;
     height: 163.81px;
     object-fit: cover;
@@ -255,7 +256,7 @@ label {
         display: flex;
         flex-direction: column;
     }
-    #previewImage, .otherImages{
+    #previewImage, .nonPreviewPics > img{
         width: 100%;
         object-fit: fill;
     }
@@ -309,7 +310,7 @@ label {
         flex-direction: column;
         align-items: center;
     }
-    .getOnePreviewImage, #previewImage, .nonPreviewPics{
+    .previewImage > img, #previewImage, .nonPreviewPics{
         width: 100%;
     }
     #pricePerNight{
@@ -348,5 +349,18 @@ label {
         width: 100%;
         display: flex;
         justify-content: space-around;
+    }
+}
+
+@media screen and (min-width: 1300px){
+    .pictures {
+        height: 500px;
+    }
+    #previewImage > img {
+        height:100%;
+    }
+    .nonPreviewPics > img {
+        height:49%;
+
     }
 }
